# gee-knn-python

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
src/geeknn/: __init__.py  _base.py  euclidean.py  gnn.py  mahalanobis.py  msn.py  utils.py
src/geeknn/examples/: example_default.py
src/geeknn/ordination/: __init__.py  _base.py  cca.py  ccora.py  euclidean.py  gnn.py  mahalanobis.py  msn.py  raw.py  utils.py
src/geeknn/test_data/: setup.py
tests/: conftest.py  setup.py  test_feature_collection.py  test_model_fc.py  test_model_spatial.py
